--- a/view/css/main.css
+++ b/view/css/main.css
@@ -15,12 +15,15 @@ h1 {
     padding-bottom: 0%;
 }
 .listItems button {
-    margin-left: 75%;
-    margin-top: 0%;
+    float: right;
+    margin-right: 25%;
+    margin-top: 2%;
     border: none;
     background-color: bisque;
     color: red;
     font-size: 20px;
+    border: 5px solid red;
+    font-weight: bold;
 }
 .listItems p {
     margin: 0%;
@@ -31,4 +34,18 @@ h1 {
     text-decoration: underline;
     font-weight: bold;
     font-size: 25px;
+}
+.listCategory {
+    background-color: bisque;
+    color: blue;
+    font-size: 20px;
+    padding-left: 10px;
+    border: 2px solid black;
+    border-radius: 10px 10px 10px;
+    margin-bottom: 0%;
+    padding-bottom: 0%;
+}
+.listCategory button {
+    float: right;
+    margin-right: 50%;
 }
