--- a/view/css/main.css
+++ b/view/css/main.css
@@ -47,5 +47,15 @@ h1 {
 }
 .listCategory button {
     float: right;
-    margin-right: 50%;
+    margin-right: 25%;
+    margin-top: 2%;
+    border: none;
+    background-color: bisque;
+    color: red;
+    font-size: 20px;
+    border: 5px solid red;
+    font-weight: bold;
+}
+.listItems p {
+    margin: 0%;
 }
