fixed most issues just have an issue when adding need break

--- a/view/css/main.css
+++ b/view/css/main.css
@@ -46,16 +46,10 @@ h1 {
     padding-bottom: 0%;
 }
 .listCategory button {
-    float: right;
-    margin-right: 25%;
-    margin-top: 2%;
-    border: none;
+    float: left;
     background-color: bisque;
     color: red;
     font-size: 20px;
     border: 5px solid red;
     font-weight: bold;
-}
-.listItems p {
-    margin: 0%;
 }
